--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">sr15</string>
-    <string name="err_msg_enter_login">Please enter your login</string>
+    <string name="err_msg_enter_email">Please enter your email</string>
     <string name="err_msg_enter_name">Please enter your name</string>
     <string name="err_msg_enter_password">Please enter your password</string>
     <string name="err_msg_enter_reppassword">Please confirm your password</string>
