--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="err_msg_enter_password">Please enter your password</string>
     <string name="err_msg_enter_reppassword">Please confirm your password</string>
     <string name="err_msg_password_mismatch">Passwords mismatch</string>
+    <string name="register_success">You are registered successfully.</string>
 </resources>
